# LLM-Emotion-Test

./: .gitignore  FIX_PLAN.md  PLAN.md  README.md  USAGE.md  pyproject.toml
configs/: base.yaml  distill.yaml  eval.yaml  rl_grpo.yaml  sft.yaml
scripts/: distil.sh  grpo.sh  sft.sh
src/llm_emotion_test/: __init__.py  config.py  distributed.py  main.py
src/llm_emotion_test/agents/: __init__.py  negotiation.py
src/llm_emotion_test/data/: __init__.py  distill.py  wrime.py
src/llm_emotion_test/evaluation/: evaluator.py
src/llm_emotion_test/models/: __init__.py  latent.py  loader.py  soft_prompt.py
src/llm_emotion_test/tasks/: __init__.py  hidden_constraints.py  negotiation_env.py
src/llm_emotion_test/training/: __init__.py  distill.py  rl.py  sft.py
tests/: test_cli.py  test_config.py  test_distill_data.py  test_evaluation.py  test_model_loader.py  test_negotiation_env.py  test_rl_grpo.py  test_sft_training.py  test_soft_prompt_model.py  test_wrime_data.py
wandb/: latest-run
wandb/run-20260525_101037-8qrefcs0/files/: requirements.txt  wandb-metadata.json
