[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-emotion-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
]

[project.scripts]
llm-emotion-test = "llm_emotion_test.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_emotion_test"]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true