[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-emotion-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.14",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "torch",
    "torchvision",
    "tqdm>=4.67.3",
    "transformers>=5.9.0",
    "trl>=1.4.0",
    "wandb>=0.27.0",
]

[project.scripts]
llm-emotion-test = "llm_emotion_test.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_emotion_test"]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
